Used functions in barra2.py in BARRA2_data_compilation.ipynb

--- a/Notebooks/BARRA2_data_compilation.ipynb
+++ b/Notebooks/BARRA2_data_compilation.ipynb
@@ -35,7 +35,6 @@
    },
    "outputs": [],
    "source": [
-    "colab = False\n",
     "input_file_name = 'in-situ_topography_phd.csv'\n",
     "output_file_name = 'barra2_vpd_phd.csv'\n",
     "\n",
@@ -49,16 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting the main working directory\n",
-    "\n",
-    "if colab:\n",
-    "    working_dir = \"/content/drive/My Drive/Work/2025.04 ANU Bushfire\"\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "else:\n",
-    "    working_dir = \"..\"\n",
-    "    import sys\n",
-    "    sys.path.append('..')"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Utils.vpd import calculate_vpd\n",
+    "from Utils.barra2 import *"
    ]
   },
   {
@@ -85,16 +78,22 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "\n",
-    "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(\"..\", \"output\", \"csv\", input_file_name))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
     "first_datetime, last_datetime = min(df['Datetime']), (max(df['Datetime']) + pd.Timedelta(days=1))\n",
     "print(\"First date: \", first_datetime.strftime(\"%Y%m%d\"), \", last date: \", last_datetime.strftime(\"%Y%m%d\"))\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.head(20)"
    ]
   },
   {
@@ -113,57 +112,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "id": "09TCVbyQWzag",
-    "outputId": "bce89aba-33c6-45c3-b275-d547c682d3ea"
-   },
-   "outputs": [],
-   "source": [
-    "# Find barra2 grid cell coordinates\n",
-    "import urllib.request\n",
-    "import xarray as xr\n",
-    "\n",
-    "# Download one barra2 file to extract grid cells\n",
-    "url = \"https://thredds.nci.org.au/thredds/fileServer/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/tas/latest/tas_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_201812-201812.nc\"\n",
-    "sampled_barra2_file_path = os.path.join(working_dir, \"Data\", \"barra2_tas_201812.nc\")\n",
-    "if not os.path.exists(sampled_barra2_file_path):\n",
-    "    urllib.request.urlretrieve(url, sampled_barra2_file_path)\n",
-    "\n",
-    "ds = xr.open_dataset(sampled_barra2_file_path)\n",
-    "\n",
-    "lats = ds['lat'].values\n",
-    "lons = ds['lon'].values\n",
-    "print(\"lats: \", lats)\n",
-    "print(\"lons: \", lons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "SieNW-RVXlqp",
     "outputId": "66e3a3f5-9b9e-4302-ffe2-c8810433d378"
    },
    "outputs": [],
    "source": [
-    "# Make a list of locations of all sites and reduce it to barra2 grid cell locations\n",
+    "# Find the nearest barra2 grid for each site\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "def find_nearest_grid_point(x, y, lon_grid, lat_grid):\n",
-    "    nearest_lon = lon_grid[np.abs(lon_grid - x).argmin()]\n",
-    "    nearest_lat = lat_grid[np.abs(lat_grid - y).argmin()]\n",
-    "    return nearest_lon, nearest_lat\n",
-    "\n",
+    "barra2_lats, barra2_lons =  get_barra2_grid_point()\n",
     "df[['barra2_X', 'barra2_Y']] = df.apply(\n",
-    "    lambda row: pd.Series(find_nearest_grid_point(row['X'], row['Y'], lons, lats)),\n",
+    "    lambda row: pd.Series(find_nearest_barra2_grid_point(row['X'], row['Y'], barra2_lons, barra2_lats)),\n",
     "    axis=1\n",
-    ")\n",
-    "barra2_cell_locations_list = list(set((x, y) for x, y in df[['barra2_X', 'barra2_Y']].values))\n",
-    "print(\"barra2_cell_locations_list length: \", len(barra2_cell_locations_list))\n",
-    "print(\"barra2_cell_locations_list: \", [(str(x), str(y)) for x, y in barra2_cell_locations_list])"
+    ")"
    ]
   },
   {
@@ -174,47 +134,16 @@
    },
    "outputs": [],
    "source": [
-    " # Use Python loop and curl to download all barra2 data\n",
+    "# Download all barra2 data\n",
     "\n",
-    "import urllib\n",
-    "import calendar\n",
-    "from datetime import datetime, timedelta\n",
+    "# List all barra2 cells that we want their data\n",
+    "barra2_cell_locations_list = list(set((x, y) for x, y in df[['barra2_X', 'barra2_Y']].values))\n",
+    "print(\"barra2_cell_locations_list length: \", len(barra2_cell_locations_list))\n",
+    "print(\"barra2_cell_locations_list: \", [(str(x), str(y)) for x, y in barra2_cell_locations_list])\n",
     "\n",
     "if download_barra2_data:\n",
-    "    barra2_data_dir = os.path.join(working_dir, \"Data/barra2\")\n",
-    "    os.makedirs(barra2_data_dir, exist_ok=True)\n",
-    "\n",
-    "    for i, (x, y) in enumerate(barra2_cell_locations_list):\n",
-    "        print(f\"Downloading data for barra2 cell coordinate {i + 1} of {len(barra2_cell_locations_list)}\")\n",
-    "        current_dt = first_datetime.replace(day=1)\n",
-    "\n",
-    "        while current_dt <= last_datetime:\n",
-    "            year = current_dt.year\n",
-    "            month = current_dt.month\n",
-    "            yyyymm = f\"{year}{month:02d}\"\n",
-    "\n",
-    "            # Determine time_start and time_end for this month\n",
-    "            month_start = current_dt\n",
-    "            last_day = calendar.monthrange(year, month)[1]\n",
-    "            month_end = datetime(year, month, last_day)\n",
-    "\n",
-    "            raw_start = month_start.strftime('%Y-%m-%dT00:00:00Z')\n",
-    "            raw_end = month_end.strftime('%Y-%m-%dT23:00:00Z')\n",
-    "            time_start = urllib.parse.quote(raw_start, safe='')\n",
-    "            time_end = urllib.parse.quote(raw_end, safe='')\n",
-    "\n",
-    "            # Download temperature and relative humidity data\n",
-    "            for var in ['tas', 'hurs']:\n",
-    "                url = f\"https://thredds.nci.org.au/thredds/ncss/grid/ob53/output/reanalysis/AUST-04/BOM/ERA5/historical/hres/BARRA-C2/v1/1hr/{var}/latest/{var}_AUST-04_ERA5_historical_hres_BOM_BARRA-C2_v1_1hr_{yyyymm}-{yyyymm}.nc?var={var}&latitude={y}&longitude={x}&time_start={time_start}&time_end={time_end}&timeStride=&vertCoord=&accept=csv\"\n",
-    "                output_file_path = os.path.join(barra2_data_dir, f\"barra2_data_{var}_{x}_{y}_{yyyymm}.csv\")\n",
-    "                print(f\"Downloading {output_file_path} from {url}\")\n",
-    "                !curl -s -L \"{url}\" -o \"{output_file_path}\" -C -\n",
-    "\n",
-    "            # Go to next month\n",
-    "            if month == 12:\n",
-    "                current_dt = datetime(year + 1, 1, 1)\n",
-    "            else:\n",
-    "                current_dt = datetime(year, month + 1, 1)"
+    "    vars = ['tas', 'hurs']\n",
+    "    download_all_barra2_data(vars, barra2_cell_locations_list, first_datetime, last_datetime)"
    ]
   },
   {
@@ -231,25 +160,10 @@
    "source": [
     "# # BARRA2 data exploration\n",
     "\n",
-    "# barra2_data_dir = os.path.join(working_dir, \"Data/barra2\")\n",
-    "# barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
-    "# barra2_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 293
-    },
-    "id": "NC2p8jreFxNP",
-    "outputId": "1f02c96c-9cd0-4880-a0f7-34c92d42f84a"
-   },
-   "outputs": [],
-   "source": [
-    "# barra2_df.head()"
+    "# if explore_barra2_data:\n",
+    "#     barra2_data_dir = os.path.join(\"..\", \"Data\", \"barra2\")\n",
+    "#     barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
+    "#     barra2_df.info()"
    ]
   },
   {
@@ -336,22 +250,6 @@
    "source": [
     "# For each row, open barra2 data csv file one-by-one to get data (40 min)\n",
     "\n",
-    "from scipy.constants import convert_temperature\n",
-    "\n",
-    "def get_barra2_value(row, var):\n",
-    "    yyyymm = row['UTC_Datetime'].round('h').strftime('%Y%m')\n",
-    "    file_path = os.path.join(barra2_data_dir, f\"barra2_data_{var}_{row['barra2_X']}_{row['barra2_Y']}_{yyyymm}.csv\")\n",
-    "    df_barra2 = pd.read_csv(file_path)\n",
-    "\n",
-    "    target_time = row['UTC_Datetime'].round('h').strftime('%Y-%m-%dT%H:%M:%SZ')\n",
-    "    column_name = df_barra2.columns[df_barra2.columns.str.contains(var)]\n",
-    "    barra2_value = df_barra2.loc[df_barra2['time'] == target_time, column_name].values[0][0]\n",
-    "    if var == 'tas':\n",
-    "        barra2_value = convert_temperature(barra2_value, 'Kelvin', 'Celsius')\n",
-    "\n",
-    "    return round(barra2_value, 3)\n",
-    "\n",
-    "barra2_data_dir = os.path.join(working_dir, \"Data/barra2\")\n",
     "df['barra2_Temperature'] = df.apply(lambda row: get_barra2_value(row, 'tas'), axis=1)\n",
     "df['barra2_RH'] = df.apply(lambda row: get_barra2_value(row, 'hurs'), axis=1)\n",
     "df.head()"
@@ -389,8 +287,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Utils.vpd import calculate_vpd\n",
-    "\n",
     "df['barra2_VPD'] = df.apply(lambda row: calculate_vpd(row['barra2_Temperature'], row['barra2_RH']), axis=1)\n",
     "df.head()"
    ]
@@ -412,15 +308,8 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
+    "df.to_csv(os.path.join(\"..\", \"output\", \"csv\", output_file_name), index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
