--- a/Notebooks/Nick_phd_data_compilation.ipynb
+++ b/Notebooks/Nick_phd_data_compilation.ipynb
@@ -361,7 +361,7 @@
    "source": [
     "end_date_df = (\n",
     "    df.groupby(['SiteID', 'X', 'Y'])['Datetime']\n",
-    "    .apply(lambda x: min(x).strftime('%Y-%m-%d'))\n",
+    "    .apply(lambda x: max(x).strftime('%Y-%m-%d'))\n",
     "    .reset_index()  # Convert the data in Series to DataFrame\n",
     "    .rename(columns={'Datetime': 'end_date'})\n",
     ")\n",
