--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
+    "sys.path.append('../..')\n",
     "from Utils.vpd import calculate_vpd\n",
     "from Utils.barra2 import *"
    ]
@@ -78,7 +78,7 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
     "first_datetime, last_datetime = min(df['Datetime']), (max(df['Datetime']) + pd.Timedelta(days=1))\n",
@@ -152,7 +152,7 @@
     "# # BARRA2 data exploration\n",
     "\n",
     "# if explore_barra2_data:\n",
-    "#     barra2_data_dir = os.path.join(\"..\", \"Data\", \"barra2\")\n",
+    "#     barra2_data_dir = os.path.join(\"..\", \"..\", \"Data\", \"barra2\")\n",
     "#     barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
     "#     barra2_df.info()"
    ]
@@ -299,7 +299,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(\"..\", \"output\", \"csv\", output_file_name), index=False)"
+    "df.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", output_file_name), index=False)"
    ]
   }
  ],
