--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
+    "sys.path.append('../..')\n",
     "import pandas as pd\n",
     "import os\n",
     "from Utils.vpd import calculate_vpd\n",
@@ -97,7 +97,7 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "df.head()"
    ]
@@ -124,7 +124,7 @@
    },
    "outputs": [],
    "source": [
-    "eratos_rh_data_dir = os.path.join(\"..\", eratos_rh_path)\n",
+    "eratos_rh_data_dir = os.path.join(\"..\", \"..\", eratos_rh_path)\n",
     "eratos_rh_df = pd.read_csv(eratos_rh_data_dir)\n",
     "eratos_rh_df.head()"
    ]
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eratos_temp_data_dir = os.path.join(\"..\", eratos_temp_path)\n",
+    "eratos_temp_data_dir = os.path.join(\"..\", \"..\", eratos_temp_path)\n",
     "eratos_temp_df = pd.read_csv(eratos_temp_data_dir)\n",
     "eratos_temp_df.head()"
    ]
@@ -259,7 +259,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(\"..\", \"output\", \"csv\", output_file_name), index=False)"
+    "df.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", output_file_name), index=False)"
    ]
   },
   {
