--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -51,7 +51,8 @@
     "import sys\n",
     "sys.path.append('../..')\n",
     "from Utils.vpd import calculate_vpd\n",
-    "from Utils.barra2 import *"
+    "from Utils.barra2 import *\n",
+    "from Utils import add_UTC_Datetime"
    ]
   },
   {
@@ -216,13 +217,7 @@
    "source": [
     "# Generate UTC_Datetime for in-situ observations\n",
     "\n",
-    "from pytz import timezone\n",
-    "\n",
-    "aus_tz = timezone('Australia/Sydney')\n",
-    "df['Datetime'] = df['Datetime'].dt.tz_localize(aus_tz, ambiguous='NaT', nonexistent='NaT')\n",
-    "df = df[~df['Datetime'].isna()]\n",
-    "df['UTC_Datetime'] = df['Datetime'].dt.tz_convert('UTC')\n",
-    "\n",
+    "df = add_UTC_Datetime(df)\n",
     "df.head()"
    ]
   },
