--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -31,23 +31,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO (HIGH): Updated and refactored"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "kGkmuT6BVk2I"
    },
    "outputs": [],
    "source": [
-    "site_data_file_name = \"in-situ_topography_phd.csv\"\n",
-    "working_dir = \"/content/drive/My Drive/Work/2025.04 ANU Bushfire\"\n",
-    "download_silo_data = False"
+    "input_file_name = 'in-situ_topography_phd.csv'\n",
+    "max_temp_output_file_name = 'silo_max_temp_vpd_phd.csv'\n",
+    "min_temp_output_file_name = 'silo_min_temp_vpd_phd.csv'\n",
+    "\n",
+    "download_silo_data = True"
    ]
   },
   {
@@ -62,10 +55,9 @@
    },
    "outputs": [],
    "source": [
-    "# Connect to Google Drive\n",
-    "\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "import sys\n",
+    "sys.path.append('../..')\n",
+    "from Utils.vpd import calculate_vpd"
    ]
   },
   {
@@ -95,7 +87,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", site_data_file_name))\n",
+    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
     "first_date, day_after_last_date = min(df['Datetime']).strftime(\"%Y%m%d\"), (max(df['Datetime']) + pd.Timedelta(days=1)).strftime(\"%Y%m%d\")\n",
@@ -128,7 +120,7 @@
     "print(\"silo_cell_locations_list: \", silo_cell_locations_list)\n",
     "\n",
     "# Use Python loop and curl to download all silo data\n",
-    "silo_data_dir = os.path.join(working_dir, \"Data/silo\")\n",
+    "silo_data_dir = os.path.join(\"..\", \"..\", \"Data\", \"silo\")\n",
     "if download_silo_data:\n",
     "    os.makedirs(silo_data_dir, exist_ok=True)\n",
     "    for x, y in silo_cell_locations_list:\n",
@@ -372,18 +364,9 @@
    "outputs": [],
    "source": [
     "# save df\n",
-    "df_max_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_max_temp_vpd.csv\"), index=False)\n",
-    "df_min_temp.to_csv(os.path.join(working_dir, \"output/csv/silo_min_temp_vpd.csv\"), index=False)"
+    "df_max_temp.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", max_temp_output_file_name), index=False)\n",
+    "df_min_temp.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", min_temp_output_file_name), index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "nihXQu5H1mY4"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -392,11 +375,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
