Add more pre-commit

--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -59,9 +59,10 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append('..')\n",
-    "from Utils.vpd import calculate_vpd\n",
-    "from Utils.barra2 import *"
+    "from Utils.barra2 import *\n",
+    "from Utils.vpd import calculate_vpd"
    ]
   },
   {
@@ -75,6 +76,7 @@
     "# Generate output directory\n",
     "\n",
     "import os\n",
+    "\n",
     "output_dir = os.path.join(\"..\", \"output/csv\")\n",
     "os.makedirs(output_dir, exist_ok=True)"
    ]
@@ -90,19 +92,22 @@
     "# Download data with a link\n",
     "\n",
     "import os\n",
+    "\n",
     "import requests\n",
     "\n",
-    "def download_file(url, filename):\n",
-    "  try:\n",
-    "    response = requests.get(url, stream=True)\n",
-    "    response.raise_for_status()  # Raise an exception for bad status codes\n",
     "\n",
-    "    with open(filename, 'wb') as file:\n",
-    "      for chunk in response.iter_content(chunk_size=8192):\n",
-    "        file.write(chunk)\n",
-    "    print(f\"Data downloaded successfully to {filename}\")\n",
-    "  except requests.exceptions.RequestException as e:\n",
-    "    print(f\"Error downloading data: {e}\")\n",
+    "def download_file(url, filename):\n",
+    "    try:\n",
+    "        response = requests.get(url, stream=True)\n",
+    "        response.raise_for_status()  # Raise an exception for bad status codes\n",
+    "\n",
+    "        with open(filename, 'wb') as file:\n",
+    "            for chunk in response.iter_content(chunk_size=8192):\n",
+    "                file.write(chunk)\n",
+    "        print(f\"Data downloaded successfully to {filename}\")\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(f\"Error downloading data: {e}\")\n",
+    "\n",
     "\n",
     "data_path = os.path.join(\"..\", \"Data\", data_file_name)\n",
     "if not os.path.exists(data_path):\n",
@@ -184,11 +189,23 @@
     "format = '%m/%d/%Y %H:%M'\n",
     "\n",
     "df['Instalation time'] = df['Instalation time'].astype(str).str.zfill(4)\n",
-    "datetime_str = df['Instalation date'].astype(str) + ' ' + df['Instalation time'].str.slice(0, 2) + ':' + df['Instalation time'].str.slice(2, 4)\n",
+    "datetime_str = (\n",
+    "    df['Instalation date'].astype(str)\n",
+    "    + ' '\n",
+    "    + df['Instalation time'].str.slice(0, 2)\n",
+    "    + ':'\n",
+    "    + df['Instalation time'].str.slice(2, 4)\n",
+    ")\n",
     "df['Instalation datetime'] = pd.to_datetime(datetime_str, format=format)\n",
     "\n",
     "df['Removal time'] = df['Removal time'].astype(str).str.zfill(4)\n",
-    "datetime_str = df['Removal date'].astype(str) + ' ' + df['Removal time'].str.slice(0, 2) + ':' + df['Removal time'].str.slice(2, 4)\n",
+    "datetime_str = (\n",
+    "    df['Removal date'].astype(str)\n",
+    "    + ' '\n",
+    "    + df['Removal time'].str.slice(0, 2)\n",
+    "    + ':'\n",
+    "    + df['Removal time'].str.slice(2, 4)\n",
+    ")\n",
     "df['Removal datetime'] = pd.to_datetime(datetime_str, format=format)\n",
     "\n",
     "df['Date'] = pd.to_datetime(df['Date'], format=format)\n",
@@ -213,7 +230,9 @@
     "# Data cleaning\n",
     "\n",
     "df = df[df['Height'] != 'zero']  # 120 to 108 sites\n",
-    "df = df[(df['Datetime'] > df['Instalation datetime']) & (df['Datetime'] < df['Removal datetime'])]  # 108 to 103 sites\n",
+    "df = df[\n",
+    "    (df['Datetime'] > df['Instalation datetime']) & (df['Datetime'] < df['Removal datetime'])\n",
+    "]  # 108 to 103 sites\n",
     "df = df[['SiteID', 'X', 'Y', 'Datetime', 'C', 'RH']]\n",
     "df = df.rename(columns={'C': 'Temperature'})\n",
     "df.head()"
@@ -263,7 +282,12 @@
     "df['MaxRH95'] = df.groupby(['SiteID'])['MaxRH'].transform(lambda x: x.quantile(0.95))\n",
     "\n",
     "# Apply correction the RH values. If RH is greater than MaxRH95, RH = 100, else RH = RH*100/MaxRH95\n",
-    "df['RH'] = df.apply(lambda row: 100 if (row['RH'] > row['MaxRH95']) | (row['RH'] < 0) else  row['RH'] * 100 / row['MaxRH95'], axis=1)\n",
+    "df['RH'] = df.apply(\n",
+    "    lambda row: (\n",
+    "        100 if (row['RH'] > row['MaxRH95']) | (row['RH'] < 0) else row['RH'] * 100 / row['MaxRH95']\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")\n",
     "df"
    ]
   },
@@ -435,13 +459,15 @@
     "# Add slope, aspect, and relief data\n",
     "# TODO (LOW) : The biophysical data are retrieved several time for each sites. Make it more efficient.\n",
     "\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "import numpy as np\n",
     "import rasterio\n",
     "from rasterio.merge import merge\n",
     "from rasterio.transform import rowcol\n",
     "from rasterio.warp import transform\n",
-    "import glob\n",
-    "import os\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "def get_value_from_latlon(data, crs, trans, x, y):\n",
     "    # Find corresponding row and column with latlon\n",
@@ -451,8 +477,11 @@
     "    try:\n",
     "        return data[row, col][0]\n",
     "    except:\n",
-    "        print(f\"There is a row with lon {x}, lat {y} outside tif files' area. The value is set to np.nan\")\n",
+    "        print(\n",
+    "            f\"There is a row with lon {x}, lat {y} outside tif files' area. The value is set to np.nan\"\n",
+    "        )\n",
     "        return np.nan\n",
+    "\n",
     "\n",
     "def add_data_to_df(property, df):\n",
     "    # TODO (LOW): There is no more need to merge all tif files.\n",
@@ -472,7 +501,9 @@
     "    #     x_proj, y_proj = transform('EPSG:4326', crs, df['X'], df['Y'])\n",
     "    #     df['temp_row'], df['temp_col'] = rowcol(out_trans, x_proj, y_proj)\n",
     "    # df[property] = df.apply(lambda row: data[row['temp_row'], row['temp_col']], axis=1)\n",
-    "    df[property] = df.apply(lambda row: get_value_from_latlon(data, crs, out_trans, row['X'], row['Y']), axis=1)\n",
+    "    df[property] = df.apply(\n",
+    "        lambda row: get_value_from_latlon(data, crs, out_trans, row['X'], row['Y']), axis=1\n",
+    "    )\n",
     "    return df"
    ]
   },
@@ -511,7 +542,9 @@
     "# Investigate missing values\n",
     "# TODO (MEDIUM): There are 5 sites in total with NaNs. Explore whether we can leave it as is.\n",
     "# NOTE: Site id 251 has row: [23133], col: [1081].\n",
-    "sites_with_nans_df = sites_df[(sites_df['slope'].isna()) | (sites_df['aspect'].isna()) | (sites_df['relief'].isna())]\n",
+    "sites_with_nans_df = sites_df[\n",
+    "    (sites_df['slope'].isna()) | (sites_df['aspect'].isna()) | (sites_df['relief'].isna())\n",
+    "]\n",
     "sites_with_nans_df"
    ]
   },
@@ -593,7 +626,9 @@
     "\n",
     "veg_cover_data_path = os.path.join(\"..\", \"Data\", \"Vegetation_cover\", \"veg_cover_phd.nc\")\n",
     "veg_ds = xr.open_dataset(veg_cover_data_path)\n",
-    "print(\"The actual crs of the veg_ds is EPSG:32754. The attribute was incorrectly saved when downloading the data.\")\n",
+    "print(\n",
+    "    \"The actual crs of the veg_ds is EPSG:32754. The attribute was incorrectly saved when downloading the data.\"\n",
+    ")\n",
     "veg_ds"
    ]
   },
@@ -651,6 +686,7 @@
    "source": [
     "# Fill in veg cover in df row by row\n",
     "\n",
+    "\n",
     "def get_veg_cover(row):\n",
     "    x = row['dea_x']\n",
     "    y = row['dea_y']\n",
@@ -678,6 +714,7 @@
     "\n",
     "    except Exception:\n",
     "        return np.nan\n",
+    "\n",
     "\n",
     "df['veg_cover'] = df.apply(get_veg_cover, axis=1)\n",
     "df.head()"
@@ -786,11 +823,16 @@
     "# Check whether the veg_cover of SiteID 67, 68, 69, 70 on 2018-12-21 are NaN or not\n",
     "df = pd.read_csv(os.path.join(output_dir, 'in-situ_topography_with_NaN_veg_cover.csv'))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
-    "first_date_df = df[df['SiteID'].isin([67, 68, 69, 70]) & (df['Datetime'].dt.strftime('%Y-%m-%d') == '2018-12-21')]\n",
+    "first_date_df = df[\n",
+    "    df['SiteID'].isin([67, 68, 69, 70]) & (df['Datetime'].dt.strftime('%Y-%m-%d') == '2018-12-21')\n",
+    "]\n",
     "first_date_df['SiteID'].unique()\n",
     "\n",
     "# Check the last date\n",
-    "last_date_df = df[df['SiteID'].isin([302, 303, 304, 305]) & (df['Datetime'].dt.strftime('%Y-%m-%d') == '2020-11-06')]\n",
+    "last_date_df = df[\n",
+    "    df['SiteID'].isin([302, 303, 304, 305])\n",
+    "    & (df['Datetime'].dt.strftime('%Y-%m-%d') == '2020-11-06')\n",
+    "]\n",
     "last_date_df['SiteID'].unique()"
    ]
   },
