--- a/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
+++ b/Notebooks/in-situ_data_preparation/topography_calculation.ipynb
@@ -65,6 +65,7 @@
    "outputs": [],
    "source": [
     "from google.colab import drive\n",
+    "\n",
     "drive.mount('/content/drive')"
    ]
   },
@@ -100,8 +101,8 @@
    "source": [
     "# Get dem_tif_file_path\n",
     "\n",
-    "import os\n",
     "import glob\n",
+    "import os\n",
     "\n",
     "if dem_tif_file_name == \"\":\n",
     "    dem_tif_file_path = glob.glob(os.path.join(working_dir, \"*.tif\"))[0]\n",
@@ -140,9 +141,10 @@
    "source": [
     "# Read the metadata and the data\n",
     "\n",
+    "import pprint\n",
+    "\n",
     "import rasterio\n",
     "from rasterio.plot import show\n",
-    "import pprint\n",
     "\n",
     "with rasterio.open(dem_tif_file_path) as src:\n",
     "    print(\"Full metadata:\")\n",
@@ -192,8 +194,11 @@
    "source": [
     "from shapely.geometry import box\n",
     "\n",
+    "\n",
     "def create_cutline_file(bbox, aus):\n",
-    "    bbox_poly = box(bbox[0], bbox[3], bbox[2], bbox[1])  # shapely box takes (minx, miny, maxx, maxy)\n",
+    "    bbox_poly = box(\n",
+    "        bbox[0], bbox[3], bbox[2], bbox[1]\n",
+    "    )  # shapely box takes (minx, miny, maxx, maxy)\n",
     "    intersection = aus.intersection(bbox_poly)\n",
     "    intersection = gpd.GeoSeries(intersection).dropna().explode(index_parts=False)\n",
     "\n",
@@ -210,6 +215,7 @@
     "        cutline_gdf.plot()\n",
     "        return cutline_gdf, cutline_path\n",
     "\n",
+    "\n",
     "def create_cropped_dem_tif(output_tif, cutline_path):\n",
     "    # Crop DEM using polygon cutline\n",
     "    gdal.UseExceptions()\n",
@@ -219,7 +225,7 @@
     "            dem_tif_file_path,\n",
     "            cutlineDSName=cutline_path,\n",
     "            cropToCutline=True,\n",
-    "            dstNodata=-9999  # Or whatever is appropriate\n",
+    "            dstNodata=-9999,  # Or whatever is appropriate\n",
     "        )\n",
     "        print(f\"Cropped DEM saved to: {output_tif}\")\n",
     "    except Exception as e:\n",
@@ -241,8 +247,9 @@
    "source": [
     "# Get .tif of only interest areas (Start with the lCoffs Harbour area)\n",
     "\n",
-    "from osgeo import gdal\n",
+    "\n",
     "import geopandas as gpd\n",
+    "from osgeo import gdal\n",
     "\n",
     "# Create a folder for storing .tif outputs\n",
     "output_dir = os.path.join(working_dir, \"output\")\n",
@@ -271,10 +278,11 @@
    },
    "outputs": [],
    "source": [
+    "import pprint\n",
+    "\n",
     "# Explore the cropped .tif dem file\n",
     "import rasterio\n",
     "from rasterio.plot import show\n",
-    "import pprint\n",
     "\n",
     "with rasterio.open(cropped_dem_tif_path) as src:\n",
     "    print(\"Full metadata:\")\n",
@@ -355,21 +363,21 @@
    "source": [
     "# Computing and visualise slope from . tif DEM data\n",
     "\n",
-    "from osgeo import gdal\n",
     "import matplotlib.pyplot as plt\n",
     "import rasterio\n",
+    "from osgeo import gdal\n",
     "\n",
     "slope_path = os.path.join(output_dir, location_name + \"_slope.tif\")\n",
     "print(f\"Slope saved to: {slope_path}\")\n",
     "\n",
     "# Compute slope\n",
     "gdal.DEMProcessing(\n",
-    "    slope_path,                  # Output file path\n",
-    "    no_neg_cropped_dem_tif_path,   # Input DEM file\n",
-    "    'slope',                       # Processing type\n",
-    "    format='GTiff',                # Output format\n",
-    "    computeEdges=True,             # Avoid edge artifacts\n",
-    "    slopeFormat='degree'           # Options: 'degree' or 'percent'\n",
+    "    slope_path,  # Output file path\n",
+    "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
+    "    'slope',  # Processing type\n",
+    "    format='GTiff',  # Output format\n",
+    "    computeEdges=True,  # Avoid edge artifacts\n",
+    "    slopeFormat='degree',  # Options: 'degree' or 'percent'\n",
     ")\n",
     "\n",
     "print(\"Slope calculation complete.\")\n",
@@ -413,11 +421,11 @@
     "\n",
     "# Compute aspect\n",
     "gdal.DEMProcessing(\n",
-    "    aspect_path,                   # Output file path\n",
-    "    no_neg_cropped_dem_tif_path,   # Input DEM file\n",
-    "    'aspect',                      # Processing type\n",
-    "    format='GTiff',                # Output format\n",
-    "    computeEdges=True              # Avoid edge artifacts\n",
+    "    aspect_path,  # Output file path\n",
+    "    no_neg_cropped_dem_tif_path,  # Input DEM file\n",
+    "    'aspect',  # Processing type\n",
+    "    format='GTiff',  # Output format\n",
+    "    computeEdges=True,  # Avoid edge artifacts\n",
     ")\n",
     "\n",
     "print(\"Aspect calculation complete.\")\n",
@@ -457,14 +465,16 @@
    "source": [
     "# Compute relief (aka Topographic position index) with median of all tiles in 5 km square\n",
     "\n",
-    "import os\n",
     "import math\n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "import rasterio\n",
     "\n",
+    "\n",
     "def calculate_relief_for_tile(dem_data, x, y):\n",
     "    reach = math.floor(2500 / 30)\n",
-    "    square = dem_data[y - reach:y + reach, x - reach:x + reach]\n",
+    "    square = dem_data[y - reach : y + reach, x - reach : x + reach]\n",
     "    # if 0.0 in square:\n",
     "    #     print(f\"Skip calculation at ({x}, {y}) because the square contains 0.0\")\n",
     "    #     return np.nan\n",
@@ -472,6 +482,7 @@
     "    relief = dem_data[y, x] - median_dem\n",
     "    print(f\"Relief at ({x}, {y}): {relief}\")\n",
     "    return relief\n",
+    "\n",
     "\n",
     "# Compute relief for the whole area\n",
     "with rasterio.open(no_neg_cropped_dem_tif_path) as src:\n",
@@ -527,7 +538,10 @@
    "source": [
     "# Notify when finish running\n",
     "from google.colab import output\n",
-    "output.eval_js('new Audio(\"https://upload.wikimedia.org/wikipedia/commons/0/05/Beep-09.ogg\").play()')"
+    "\n",
+    "output.eval_js(\n",
+    "    'new Audio(\"https://upload.wikimedia.org/wikipedia/commons/0/05/Beep-09.ogg\").play()'\n",
+    ")"
    ]
   },
   {
@@ -573,7 +587,8 @@
     "# prompt: connect to google drive\n",
     "\n",
     "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n"
+    "\n",
+    "drive.mount('/content/drive')"
    ]
   },
   {
@@ -587,16 +602,19 @@
     "# prompt: download a zip file\n",
     "# NOTE: Took 6 minutes\n",
     "\n",
-    "import requests\n",
     "from io import BytesIO\n",
     "from zipfile import ZipFile\n",
     "\n",
-    "def download_unzip(url, extract_to='.'):\n",
-    "  response = requests.get(url)\n",
-    "  response.raise_for_status()\n",
+    "import requests\n",
     "\n",
-    "  with ZipFile(BytesIO(response.content)) as zfile:\n",
-    "    zfile.extractall(extract_to)\n",
+    "\n",
+    "def download_unzip(url, extract_to='.'):\n",
+    "    response = requests.get(url)\n",
+    "    response.raise_for_status()\n",
+    "\n",
+    "    with ZipFile(BytesIO(response.content)) as zfile:\n",
+    "        zfile.extractall(extract_to)\n",
+    "\n",
     "\n",
     "# TODO: Skip download if file exists\n",
     "download_unzip(dem_data_url, working_dir)"
@@ -612,8 +630,8 @@
    "source": [
     "# Get gbd_file_path\n",
     "\n",
-    "import os\n",
     "import glob\n",
+    "import os\n",
     "\n",
     "gdb_file_path = glob.glob(os.path.join(working_dir, \"*/*.gdb\"))[0]\n",
     "print(f\"gdb_file_path: {gdb_file_path}\")"
@@ -663,6 +681,7 @@
     "# (Not interpretable) View DEM block_data\n",
     "\n",
     "import zlib\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "layer_name = \"fras_blk_lf_dem1sec_noExclusions_noNegValues\"\n",
@@ -731,6 +750,7 @@
    "outputs": [],
    "source": [
     "from google.colab import files\n",
+    "\n",
     "uploaded = files.upload()"
    ]
   },
