--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -49,10 +49,11 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append('../..')\n",
-    "from Utils.vpd import calculate_vpd\n",
+    "from Utils import add_UTC_Datetime\n",
     "from Utils.barra2 import *\n",
-    "from Utils import add_UTC_Datetime"
+    "from Utils.vpd import calculate_vpd"
    ]
   },
   {
@@ -83,7 +84,12 @@
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
     "first_datetime, last_datetime = min(df['Datetime']), (max(df['Datetime']) + pd.Timedelta(days=1))\n",
-    "print(\"First date: \", first_datetime.strftime(\"%Y%m%d\"), \", last date: \", last_datetime.strftime(\"%Y%m%d\"))\n",
+    "print(\n",
+    "    \"First date: \",\n",
+    "    first_datetime.strftime(\"%Y%m%d\"),\n",
+    "    \", last date: \",\n",
+    "    last_datetime.strftime(\"%Y%m%d\"),\n",
+    ")\n",
     "\n",
     "df.head()"
    ]
@@ -111,10 +117,12 @@
    "source": [
     "# Find the nearest barra2 grid for each site\n",
     "\n",
-    "barra2_lats, barra2_lons =  get_barra2_grid_point()\n",
+    "barra2_lats, barra2_lons = get_barra2_grid_point()\n",
     "df[['barra2_X', 'barra2_Y']] = df.apply(\n",
-    "    lambda row: pd.Series(find_nearest_barra2_grid_point(row['X'], row['Y'], barra2_lons, barra2_lats)),\n",
-    "    axis=1\n",
+    "    lambda row: pd.Series(\n",
+    "        find_nearest_barra2_grid_point(row['X'], row['Y'], barra2_lons, barra2_lats)\n",
+    "    ),\n",
+    "    axis=1,\n",
     ")"
    ]
   },
@@ -273,7 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['barra2_VPD'] = df.apply(lambda row: calculate_vpd(row['barra2_Temperature'], row['barra2_RH']), axis=1)\n",
+    "df['barra2_VPD'] = df.apply(\n",
+    "    lambda row: calculate_vpd(row['barra2_Temperature'], row['barra2_RH']), axis=1\n",
+    ")\n",
     "df.head()"
    ]
   },
