--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -66,11 +66,14 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append('../..')\n",
-    "import pandas as pd\n",
     "import os\n",
-    "from Utils.vpd import calculate_vpd\n",
-    "from Utils.datetime import add_UTC_Datetime"
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from Utils.datetime import add_UTC_Datetime\n",
+    "from Utils.vpd import calculate_vpd"
    ]
   },
   {
@@ -183,6 +186,7 @@
    "source": [
     "# Fill in df with eratos data\n",
     "\n",
+    "\n",
     "# For each row, open eratos data csv file one-by-one to get data\n",
     "def get_eratos_value(row, eratos_df):\n",
     "    SiteID_str = str(row['SiteID'])\n",
@@ -193,6 +197,7 @@
     "    print(eratos_value)\n",
     "\n",
     "    return eratos_value\n",
+    "\n",
     "\n",
     "df['eratos_Temperature'] = df.apply(lambda row: get_eratos_value(row, eratos_temp_df), axis=1)\n",
     "df['eratos_RH'] = df.apply(lambda row: get_eratos_value(row, eratos_rh_df), axis=1)\n",
@@ -238,7 +243,9 @@
    },
    "outputs": [],
    "source": [
-    "df['eratos_VPD'] = df.apply(lambda row: calculate_vpd(row['eratos_Temperature'], row['eratos_RH']), axis=1)\n",
+    "df['eratos_VPD'] = df.apply(\n",
+    "    lambda row: calculate_vpd(row['eratos_Temperature'], row['eratos_RH']), axis=1\n",
+    ")\n",
     "df.head()"
    ]
   },
