--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -56,6 +56,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append('../..')\n",
     "from Utils.vpd import calculate_vpd"
    ]
@@ -84,13 +85,15 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "import pandas as pd\n",
     "import os\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
-    "first_date, day_after_last_date = min(df['Datetime']).strftime(\"%Y%m%d\"), (max(df['Datetime']) + pd.Timedelta(days=1)).strftime(\"%Y%m%d\")\n",
+    "first_date = min(df['Datetime']).strftime(\"%Y%m%d\")\n",
+    "day_after_last_date = (max(df['Datetime']) + pd.Timedelta(days=1)).strftime(\"%Y%m%d\")\n",
     "print(\"First date: \", first_date, \", One day after the last date: \", day_after_last_date)\n",
     "\n",
     "df.head()"
@@ -110,8 +113,10 @@
    "source": [
     "# Load silo data\n",
     "\n",
+    "\n",
     "def nearest_silo_cell(x, y):\n",
     "    return (round(round(x / 0.05) * 0.05, 3), round(round(y / 0.05) * 0.05, 3))\n",
+    "\n",
     "\n",
     "# Make a list of locations of all sites and reduce it to silo grid cell locations\n",
     "df['silo_X'] = df.apply(lambda row: nearest_silo_cell(row['X'], row['Y'])[0], axis=1)\n",
@@ -155,7 +160,9 @@
     "# Find in-situ data's hottest and coldest observation of each day\n",
     "\n",
     "# Assign silo_observation_date to each observation\n",
-    "mask = (df['Datetime'].dt.hour > 9) | ((df['Datetime'].dt.hour == 9) & (df['Datetime'].dt.minute > 0))\n",
+    "mask = (df['Datetime'].dt.hour > 9) | (\n",
+    "    (df['Datetime'].dt.hour == 9) & (df['Datetime'].dt.minute > 0)\n",
+    ")\n",
     "df.loc[mask, 'silo_observation_date'] = df.loc[mask, 'Datetime'] + pd.Timedelta(days=1)\n",
     "df.loc[~mask, 'silo_observation_date'] = df.loc[~mask, 'Datetime']\n",
     "df['silo_observation_date'] = pd.to_datetime(df['silo_observation_date']).dt.date\n",
@@ -163,18 +170,24 @@
     "# Remove rows of the first and last dates of each site because those days lack some hours\n",
     "first_last_dates = df.groupby('SiteID')['silo_observation_date'].agg(['min', 'max']).reset_index()\n",
     "df = df.merge(first_last_dates, on='SiteID', how='left')\n",
-    "df_date_filtered = df[(df['silo_observation_date'] != df['min']) & (df['silo_observation_date'] != df['max'])]\n",
+    "df_date_filtered = df[\n",
+    "    (df['silo_observation_date'] != df['min']) & (df['silo_observation_date'] != df['max'])\n",
+    "]\n",
     "df_date_filtered = df_date_filtered.drop(columns=['min', 'max'])\n",
     "\n",
     "# Select only rows with max tempurature of the day\n",
-    "df_date_filtered['Day_max_temp'] = df_date_filtered.groupby(['SiteID', 'silo_observation_date'])['Temperature'].transform('max')\n",
+    "df_date_filtered['Day_max_temp'] = df_date_filtered.groupby(['SiteID', 'silo_observation_date'])[\n",
+    "    'Temperature'\n",
+    "].transform('max')\n",
     "df_max_temp = df_date_filtered[df_date_filtered['Temperature'] == df_date_filtered['Day_max_temp']]\n",
     "print(\"In-situ day maximum temperature observations:\")\n",
     "print(df_max_temp.head())\n",
     "print('\\n')\n",
     "\n",
     "# Select only rows with min tempurature of the day\n",
-    "df_date_filtered['Day_min_temp'] = df_date_filtered.groupby(['SiteID', 'silo_observation_date'])['Temperature'].transform('min')\n",
+    "df_date_filtered['Day_min_temp'] = df_date_filtered.groupby(['SiteID', 'silo_observation_date'])[\n",
+    "    'Temperature'\n",
+    "].transform('min')\n",
     "df_min_temp = df_date_filtered[df_date_filtered['Temperature'] == df_date_filtered['Day_min_temp']]\n",
     "print(\"In-situ day minimum temperature observations:\")\n",
     "df_min_temp.head()\n",
@@ -237,6 +250,7 @@
    "source": [
     "# Fill in df with silo data at the hottest time of the day (max_temp, RH_tmax)\n",
     "\n",
+    "\n",
     "# For each row, open silo data csv file one-by-one to get data\n",
     "def get_silo_value(row, column):\n",
     "    file_path = os.path.join(silo_data_dir, f\"silo_data_{row['silo_X']}_{row['silo_Y']}.csv\")\n",
@@ -248,7 +262,10 @@
     "\n",
     "    return silo_value\n",
     "\n",
-    "df_max_temp['silo_Temperature'] = df_max_temp.apply(lambda row: get_silo_value(row, 'max_temp'), axis=1)\n",
+    "\n",
+    "df_max_temp['silo_Temperature'] = df_max_temp.apply(\n",
+    "    lambda row: get_silo_value(row, 'max_temp'), axis=1\n",
+    ")\n",
     "df_max_temp['silo_RH'] = df_max_temp.apply(lambda row: get_silo_value(row, 'rh_tmax'), axis=1)\n",
     "df_max_temp.head()"
    ]
@@ -268,7 +285,9 @@
    "source": [
     "# Fill in df with silo data at the coldest time of the day (min_temp, RH_tmin)\n",
     "\n",
-    "df_min_temp['silo_Temperature'] = df_min_temp.apply(lambda row: get_silo_value(row, 'min_temp'), axis=1)\n",
+    "df_min_temp['silo_Temperature'] = df_min_temp.apply(\n",
+    "    lambda row: get_silo_value(row, 'min_temp'), axis=1\n",
+    ")\n",
     "df_min_temp['silo_RH'] = df_min_temp.apply(lambda row: get_silo_value(row, 'rh_tmin'), axis=1)\n",
     "df_min_temp.head()"
    ]
@@ -318,7 +337,9 @@
     "# Write a function for deriving VPD from temp and RH\n",
     "\n",
     "import math\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "def calculate_vpd(temp, rh):\n",
     "    if pd.isna(temp) or pd.isna(rh):\n",
@@ -328,8 +349,13 @@
     "    vpd = es - e\n",
     "    return vpd\n",
     "\n",
-    "df_max_temp['silo_VPD'] = df_max_temp.apply(lambda row: calculate_vpd(row['silo_Temperature'], row['silo_RH']), axis=1)\n",
-    "df_min_temp['silo_VPD'] = df_min_temp.apply(lambda row: calculate_vpd(row['silo_Temperature'], row['silo_RH']), axis=1)\n",
+    "\n",
+    "df_max_temp['silo_VPD'] = df_max_temp.apply(\n",
+    "    lambda row: calculate_vpd(row['silo_Temperature'], row['silo_RH']), axis=1\n",
+    ")\n",
+    "df_min_temp['silo_VPD'] = df_min_temp.apply(\n",
+    "    lambda row: calculate_vpd(row['silo_Temperature'], row['silo_RH']), axis=1\n",
+    ")\n",
     "df_max_temp.head()"
    ]
   },
@@ -364,8 +390,12 @@
    "outputs": [],
    "source": [
     "# save df\n",
-    "df_max_temp.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", max_temp_output_file_name), index=False)\n",
-    "df_min_temp.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", min_temp_output_file_name), index=False)"
+    "df_max_temp.to_csv(\n",
+    "    os.path.join(\"..\", \"..\", \"output\", \"csv\", max_temp_output_file_name), index=False\n",
+    ")\n",
+    "df_min_temp.to_csv(\n",
+    "    os.path.join(\"..\", \"..\", \"output\", \"csv\", min_temp_output_file_name), index=False\n",
+    ")"
    ]
   }
  ],
