--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -51,8 +51,8 @@
     "import sys\n",
     "\n",
     "sys.path.append('../..')\n",
-    "from Utils import add_UTC_Datetime\n",
     "from Utils.barra2 import *\n",
+    "from Utils.datetime import add_UTC_Datetime\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
