--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -109,7 +109,7 @@
     "        print(f\"Error downloading data: {e}\")\n",
     "\n",
     "\n",
-    "data_path = os.path.join(\"..\", \"Data\", data_file_name)\n",
+    "data_path = os.path.join('..', '..', 'Data', 'phd', data_file_name)\n",
     "if not os.path.exists(data_path):\n",
     "    download_file(data_url, data_path)"
    ]
@@ -412,7 +412,7 @@
    "outputs": [],
    "source": [
     "# Save to CSV\n",
-    "sites_df.to_csv(os.path.join(output_dir, 'site_data_summary_phd.csv'), index=False)"
+    "sites_df.to_csv(os.path.join('..', '..', 'Data', 'phd', 'site_data_summary_phd.csv'), index=False)"
    ]
   },
   {
